# prompt-writing

./: .gitignore  Cargo.toml
src/: main.rs
src/data/: mod.rs  writing_prompt_repository.rs
src/http/: app_state.rs  mod.rs  prompts.rs  session.rs
src/http/forms/: mod.rs
static/: index.html
static/style/: main.css
