[package]
name = "prompt-writing"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["tokio"] }
chrono = "0.4.39"
futures-util = "0.3.31"
rand = "0.8.5"
rocksdb = "0.22.0"
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1.17"
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs", "util"] }
